####################################################################################
##
##     _____    ____ _       ____ _        __ _      __ _  __ _  ______ _   ___ _
##    / /| |]  |  __ \\     / ___ \\      / \ \\    |   \\/   |]|  _____|] / ___|]
##   / //| |]  | |] \ \\   | |]  \_|]    / //\ \\   | |\ / /| |]| |]___ _ ( ((_ _
##  / //_| |]_ | |]  ) ))  | |]  __ _   / _____ \\  | |]\_/ | |]|  _____|] \___ \\
## |_____   _|]| |]_/ //   | |]__/  |] / //    \ \\ | |]    | |]| |]___ _   ___) ))
##       |_|]  |_____//     \_____/|]]/_//      \_\\|_|]    |_|]|_______|] |____//
## 
##
####################################################################################
##
##
##  File    : CMakeLists.txt
##  Author  : Alan Islas
##  Purpose : Src for physics
##  Group   : Src
##
##  TODO    : None
##
##  License : None
##
####################################################################################

add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/api    )
# add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/common )

if ( UNIT_TEST )

  set( TEST_SOURCES 
       ${TEST_SOURCES} 
       PARENT_SCOPE )

endif()